--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
@@ -24,7 +31,7 @@
     "react-image-viewer-hook": "^0.3.1",
     "react-medium-image-zoom": "^5.2.11",
     "react-viewer": "^3.2.2",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
@@ -35,6 +42,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
     "autoprefixer": "^10.0.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -50,5 +58,10 @@
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
