--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "pdfjs-dist": "3.11.174",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-image-viewer-hook": "^0.3.1",
     "react-medium-image-zoom": "^5.2.11",
     "react-viewer": "^3.2.2",
