--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
@@ -62,7 +66,8 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "standard-version": "^9.5.0"
   },
   "config": {
     "commitizen": {
