--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
-    "pdfjs-dist": "3.11.174",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
